# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindASSIMP.cmake  FindFREETYPE2.cmake  FindGLFW3.cmake
img/girl/: 1.mtl
include/: glad.c  stb_image_wrap.cpp
include/breakout/: ball_object.h  game.h  game_level.h  game_object.h  particle_generator.h  post_processor.h  power_up.h  resource_manager.h  sprite_renderer.h  texture.h
include/glad/: glad.h
include/learnopengl/: camera.h  mesh.h  model.h  shader_s.h
shader/: start3d.vs  texture.fs  texture_mix.fs  transform.vs
shader/advance/: Blending_discard.fs  framebuffers.vs  framebuffers_post_processing.fs  reflection.fs  reflection.vs  refraction.fs  skybox.vs
shader/breakout/: particle.fs
shader/lighting/: basic_lighting.fs  basic_lighting.vs  colors.fs  directional.fs  materials.fs  multiple_lights.fs  point.fs  spot.fs  spot_soft.fs
shader/model/: model_girl.fs  model_loading.fs
src/advance/: Blending_discard.cpp  Blending_translucent.cpp  CMakeLists.txt  Cubemaps_reflection.cpp  Cubemaps_refraction.cpp  Cubemaps_skybox.cpp  Depth_testing.cpp  FaceCulling.cpp  Framebuffers.cpp  Framebuffers_post_processing.cpp  Stencil_testing.cpp
src/breakout/: CMakeLists.txt  ball_object.cpp  game.cpp  game_level.cpp  game_object.cpp  main.cpp  particle_generator.cpp  post_processor.cpp  resource_manager.cpp  sprite_renderer.cpp  texture.cpp
src/lighting/: Basic_lighting.cpp  CMakeLists.txt  Colors.cpp  Directional.cpp  Lighting_maps.cpp  Materials.cpp  Multiple_lights.cpp  Point.cpp  Spot.cpp  Spot_soft.cpp
src/model/: CMakeLists.txt  Model_girl.cpp  Model_loading.cpp
src/start/: CMakeLists.txt  Camera.cpp  Camera_move.cpp  HelloTriangle.cpp  HelloTriangle_2.cpp  HelloWindow.cpp  More3d.cpp  More3d_2.cpp  RenderText.cpp  Shaders_2.cpp  Shaders_uniform.cpp  Start3d.cpp  Textures.cpp  Textures_mix.cpp  Transformation.cpp
test/: CMakeLists.txt  test_camera_h.cpp  test_shader_s.h.cpp
