# 你好，窗口
add_executable(HelloWindow HelloWindow.cpp)
target_link_libraries(HelloWindow glfw3 glad)

# 你好，三角形
add_executable(HelloTriangle HelloTriangle.cpp)
target_link_libraries(HelloTriangle glfw3 glad)

add_executable(HelloTriangle_2 HelloTriangle_2.cpp)
target_link_libraries(HelloTriangle_2 glfw3 glad)